2013-01-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* schedule.*, usecode/intrinsics.cc: Fixed bug #3599714 "Attacked npcs make
	  their bed before defending themselves". Also fixed bug where NPCs were not
	  too concerned about who they share their beds with -- they could lie down
	  with the avatar. Incidentally, this incidentaly fixes the bug reported in
	  the comments of the aforementioned bug report (avatar making a bed that an
	  NPC took right after the avatar woke up). Improved bed occupancy detection
	  routine allows children to be detected too.
	Rev 7263:
	* actors.cc, schedule.cc: Actor::unready_weapon causes actor to redraw if a
	  weapon has been unreadied. Forcibly remove the weapon from hand if not a
	  party NPC and belt slot is being used. Places where Actor::unready_weapon
	  were called together with Game_object::add_dirty see the latter removed.
	Rev 7265:
	* objs/objnames.cc: Incorrect branch caused undefined behavior.
	Rev 7266:
	* shapes/*: Eliminating warnings.
	Rev 7267:
	* gamewin.cc: Avatar now properly restores into combat if the game was saved
	  during combat. Correct mouse shape is set in all cases.
	* gamewin.*, mouse.*: Eliminating warnings.

2013-01-06	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actions.cc: Fixed Fawn guards sometimes not being able to open doors.
	* actions.*, actors.cc: Prevent schedule changes from stopping intrinsics
	  path_run_usecode and si_path_run_usecode. This fixes avatar not animating
	  to roll bedroll if sleep is cancelled, and maybe a few other things.
	* gamewin.cc: Eliminate double check for avatar paralysis. Sleep schedule no
	  longer prevents avatar from moving (sleep flag does that).
	* paths.cc: More changes to Fast_pathfinder_client::is_grabable, as previous
	  version prevented, for example, the gavel at Spark's from being used.
	* schedule.*: Refactored code common to patrol and pace schedules. NPCs will